# mcp-agent-graph

./: .gitignore  CITATION.cff  License.txt  MANIFEST.in  README.md  README.zh.md  README_CN.md  SECURITY.md  __version__.py  mcp_client.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test.html  todo.txt
.github/workflows/: docs.yml
app/api/: routes.py
app/core/: config.py  file_manager.py
app/models/: schema.py
app/server/: bilibili.py
app/services/: graph_service.py  mcp_service.py  model_service.py
app/templates/: conversation_template.py  flow_diagram.py  markdown_generator.py  mcp_parallel_template.py  mcp_sequential_template.py
app/utils/: conversation_template.py  flow_diagram.py  (+3 more)
appendix/: intro.md  intro_zh.md
assets/: milestone.html  roadmap.html  roadmap.md  roadmap_en.md  roadmap_zh.md
docker/: .env  docker-compose.yml
docs/: README.md  README.zh.md  README_DOCS.md  README_DOCS.zh.md  index.html  index.md  index.zh.md  test-site.html
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
mag/: __init__.py  __version__.py  core.py  main.py  mcp_client.py
pages/: mag_docs.html  mag_docs_conversation.html  mag_docs_examples.html  mag_docs_graph.html  mag_docs_index.html  mag_docs_mcp.html  mag_docs_model.html  mag_docs_system.html
sdk_demo/: app.ipynb  bilibili_search_parallel.py  bilibili_search_sequential.py  deepsearch.json  get_prompt_template.py  mag_prompt_template.md  news_processing_workflow.json  pro.md
wiki/: SDK使用指南.md  安全考虑.md  快速开始.md  部署与运维.md  项目概述.md
(+907 files in other folders)
